--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    /* Style for the navigation menu */
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: #333; /* Change this color to suit your design */
-    }
-
-   
-    li a {
-      float: left;  
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 16px 16px;
-      text-decoration:none;
-    }
-
-    li a:hover {
-      background-color:green; /* Change this color to suit your design */
-    }
-  </style>
+  <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
 
   <!-- Navigation menu -->
+  <div id="hi">
   <ul>
     <li><a href="#home">Home</a></li>
     <li><a href="#about">About Us</a></li>
@@ -41,6 +20,8 @@
   </ul>
 
   <!-- Your page content goes here -->
+  
+  </div>
   <div>
     <h1>Welcome to our website!</h1>
     <!-- Rest of your content -->
